recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:4: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^PentaKoch:6: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^PentaKoch:8: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^PentaKoch:10: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^PentaKoch:12: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^PentaKoch:14: error: not found: value pentakoch
    pentakoch(levels-1,length*0.4)
    ^