recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
  if (levels==0){avance(length)}
  else{
    pentakoch(levels-1,length*0.4)
    gauche(720/5)
    pentakoch(levels-1,length*0.4)
    droite(360/5)
    pentakoch(levels-1,length*0.4)
    droite(360/5)
    pentakoch(levels-1,length*0.4)
    droite(360/5)
    pentakoch(levels-1,length*0.4)
    gauche(720/5)
    pentakoch(levels-1,length*0.4)
  }
}